--- a/MicropatcherAutomator/MicropatcherAutomator/Views/HedgehogPatchUSB.xib
+++ b/MicropatcherAutomator/MicropatcherAutomator/Views/HedgehogPatchUSB.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="15705" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="18122" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="15705"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="18122"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -56,6 +56,9 @@
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="system"/>
                     </buttonCell>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="image.template" value="YES"/>
+                    </userDefinedRuntimeAttributes>
                     <connections>
                         <action selector="hedgehogStartPatching:" target="-2" id="lnz-Pd-GTq"/>
                     </connections>
@@ -76,6 +79,9 @@
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="system"/>
                     </buttonCell>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="image.template" value="YES"/>
+                    </userDefinedRuntimeAttributes>
                     <connections>
                         <action selector="hedgehogPatchUSBBack:" target="-1" id="57h-0Z-hK1"/>
                     </connections>
@@ -96,7 +102,7 @@
                 <box fixedFrame="YES" borderType="line" title="Box" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="Glc-Iv-ujF">
                     <rect key="frame" x="190" y="120" width="350" height="237"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <view key="contentView" ambiguous="YES" id="PnS-6c-NG0">
+                    <view key="contentView" id="PnS-6c-NG0">
                         <rect key="frame" x="3" y="3" width="344" height="231"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -207,11 +213,11 @@
                 <scrollView fixedFrame="YES" borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Be-b7-2cU">
                     <rect key="frame" x="80" y="120" width="569" height="211"/>
                     <autoresizingMask key="autoresizingMask"/>
-                    <clipView key="contentView" ambiguous="YES" drawsBackground="NO" copiesOnScroll="NO" id="H6j-lw-qMG">
+                    <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="H6j-lw-qMG">
                         <rect key="frame" x="0.0" y="0.0" width="569" height="211"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView ambiguous="YES" importsGraphics="NO" richText="NO" verticallyResizable="YES" smartInsertDelete="YES" id="eVU-Ju-8EW">
+                            <textView importsGraphics="NO" richText="NO" verticallyResizable="YES" smartInsertDelete="YES" id="eVU-Ju-8EW">
                                 <rect key="frame" x="0.0" y="0.0" width="569" height="211"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
